Resolving Meteor package issues

--- a/_crayola.scss
+++ b/_crayola.scss
@@ -58,7 +58,7 @@ $tropical-rain-forest: #00755e;
 $middle-blue-green: #8dd9cc;
 $pine-green: #01786f;
 $maximum-blue-green: #30bfbf;
-$robin's-egg-blue: #00cccc;
+$robins-egg-blue: #00cccc;
 $teal-blue: #008080;
 $light-blue: #8fd8d8;
 $aquamarine: #95e0e8;
@@ -77,7 +77,7 @@ $green-blue: #2887c8;
 $midnight-blue: #00468c;
 $navy-blue: #0066cc;
 $denim: #1560bd;
-$blue (iii): #0066ff;
+$blue-3: #0066ff;
 $cadet-blue: #a9b2c3;
 $periwinkle: #c3cde6;
 $blue-2: #4570e6;
