--- a/_crayola.scss
+++ b/_crayola.scss
@@ -1,3 +1,10 @@
+/*
+ *  Crayola color library for Sass
+ *  Mick Malowany (mickm on Meteor, mickmalowany on GitHub and Twitter)
+ *  Based on the List of Crayola crayon colors on Wikipedia (https://en.wikipedia.org/wiki/List_of_Crayola_crayon_colors)
+ *
+ */
+
 $red: #ed0a3f;
 $maroon: #c32148;
 $scarlet: #fd0e35;
